--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
     - OCTOKIT_SILENT=true
 
 before_install:
-  - gem update bundler
+  - gem install bundler -v "1.17.3"
 
 before_script:
   - chmod 600 spec/fixtures/.netrc
